Fix styles panel not fully hidden on mobile when closed

--- a/src/pages/EditorPage/StylesPanel/StylesPanel.module.scss
+++ b/src/pages/EditorPage/StylesPanel/StylesPanel.module.scss
@@ -79,7 +79,7 @@
     right: 0;
     top: auto;
     width: 100%;
-    transform: translateY(calc(100% + 100px));
+    transform: translateY(100vh);
     transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     z-index: 12;
   }
